# pyroscope

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TASKS.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: API.md  EVENT_CONTRACT.md  IMPLEMENTATION_PLAN.md
examples/: cancellation_demo.py  resource_contention.py  taskgroup_cancellation.py  timeout_contention.py  worker_pool.py
scripts/: sync_web_dist.py
src/pyroscope/: api.py  cli.py  model.py  runtime.py  session.py
tests/: test_api.py  test_cli.py  test_runtime.py  test_session.py
tests/fixtures/: replay_capture.json  replay_compare_regression.json  replay_drift_baseline.json  replay_drift_cancellation_baseline.json  replay_drift_cancellation_shifted.json  replay_drift_shifted.json  replay_event_wait_cancel.json  replay_external_child_mix.json  replay_gather_fanout.json  replay_mixed_taskgroup.json  replay_multi_root.json  replay_parent_cancel.json  replay_queue_contention_cancel.json  replay_queue_mixed_contention.json  replay_queue_put_backpressure.json  replay_queue_semaphore_contention_cancel.json  replay_resource_contention.json  replay_root_cancelled.json  replay_root_failed.json  replay_root_group_failed.json  replay_root_resource_baseline.json  replay_root_resource_shifted.json  replay_schema_future_fields.json  replay_schema_v0_9.json  replay_semaphore_cancel.json  replay_service_workload_baseline.json  replay_service_workload_shifted.json  (+1 more)
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  (+6 more)
(+29 files in other folders)
