[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroscope-asyncio"
version = "0.1.0"
description = "Local asyncio concurrency inspector"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Khachatur"}]
dependencies = []

[project.scripts]
pyroscope = "pyroscope.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

