[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroscope-asyncio"
version = "0.1.0"
description = "Local asyncio concurrency inspector"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Khachatur"}]
dependencies = []

[dependency-groups]
dev = [
    "black>=25.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[project.scripts]
pyroscope = "pyroscope.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyroscope = ["web_dist/index.html", "web_dist/assets/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312", "py313"]
